# chainagent

./: .gitignore  CLAUDE.md  Cargo.toml  Conversation with ChatGPT.md  README.md  demo.md
.cursor/rules/: process-task-list.mdc  prototyping_in_rust.mdc
.github/workflows/: ci.yml
baml/: agent.baml  tools.baml
baml2/baml_src/: generators.baml  resume.baml
crates/baml_cecilia/: Cargo.toml
crates/baml_cecilia/src/: main.rs
crates/baml_client/: Cargo.toml
crates/baml_client/src/: baml.rs  baml_bindings.rs  main.rs  mcp.rs  parser.rs  provider.rs  tools.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/foundry_adapter/: Cargo.toml
crates/foundry_adapter/src/: cache.rs  constants.rs  error.rs  lib.rs  validation.rs
crates/foundry_adapter/tests/: integration.rs
crates/mcp_server/: Cargo.toml
crates/mcp_server/src/: dto.rs  external_api.rs  facade.rs  main.rs  sessions.rs  toolbox.rs  uniswap_v2.rs
crates/rag_client/: Cargo.toml
crates/rag_client/src/: lib.rs
tasks/: prd-agentic-mcp-toolbox-for-evm.md  tasks-prd-agentic-mcp-toolbox-for-evm.md
tests/: e2e.rs  invalid_input.rs  uniswap_swap_e2e.rs
