[workspace]
members = [
    "crates/domain",
    "crates/foundry_adapter",
    "crates/mcp_server",
    "crates/baml_client",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
ethers-contract = "2"
ethers-providers = "2"
ethers-signers = "2"
ethers-core = "2"
ethers-middleware = "2"
