[package]
name = "baml_cecilia"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { workspace = true, features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
dotenvy.workspace = true
# Using the generated BAML client
baml-client-cecilia.workspace = true