[package]
name = "baml_client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
async-trait.workspace = true
domain = { path = "../domain" }
dotenvy.workspace = true
urlencoding = "2"

[features]
# No-op feature to align with shared cfg names and silence unexpected cfg warnings
bonus_uniswap_v2 = []

