[package]
name = "foundry_adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
ethers-contract.workspace = true
ethers-providers.workspace = true
ethers-signers.workspace = true
ethers-core.workspace = true
ethers-middleware.workspace = true
reqwest = { workspace = true, features = ["json"] }

