[package]
name = "mcp_server"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
foundry_adapter = { path = "../foundry_adapter" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
clap.workspace = true
async-trait.workspace = true

